--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <body>
     <header>
       <div id="sidebar">
-        <div class="toggle-btn" onclick="toggleSidebar()">
-          <span></span>
-          <span></span>
-          <span></span>
+        <div id="toggle-btn" class="ion-navicon-round">
+          <h6 class="menutext">Menu</h6>
         </div>
+
         <ul>
           <li>Home</li>
           <li>About</li>
@@ -24,6 +23,7 @@
           <li>Contact Us</li>
         </ul>
       </div>
+
       <h1 class="title">BON VOYAGE</h1>
       <h4 class="tag-line">GREAT EXPIERINCES DON'T COME FROM COMFORT ZONES</h4>
       <button class="home-register" type="button">Register</button>
@@ -42,11 +42,47 @@
           from eagles and Chinook salmon to Sitka spruce and giant Douglas fir.
           From here, you can trek, paddle, comb the beaches, or cast your line.
         </p>
-
-        <div class="section1-images"></div>
       </div>
     </section>
+    <section class="second-section">
+      <div class="section1-images">
+        <img
+          src="/resources/css/img/Hawaii.jpg"
+          alt="Hawaii"
+          width="50%"
+          height="400px"
+          class="firstImage"
+        />
+        <div class="description1">
+          <h3>Best Beaches</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            totam dolores exercitationem fuga quo sint itaque asperiores! Alias
+            corrupti impedit eligendi iste amet aperiam facere!
+          </p>
+        </div>
+        <aside>
+          <img
+            src="resources/css/img/Island.jpg"
+            alt="Island"
+            width="50%"
+            height="400px"
+            class="SecondImage"
+          />
+        </aside>
+        <div class="description2">
+          <h3>Best Island</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            totam dolores exercitationem fuga quo sint itaque asperiores! Alias
+            corrupti impedit eligendi iste amet aperiam facere!
+          </p>
+        </div>
+      </div>
+    </section>
+
     <footer></footer>
   </body>
   <script src="/resources/JS/index.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html>
