Scrollbar Settings  and Second Section Complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <header>
+      <!------------------------------>
+      <!---------- SIDEBAR ----------->
+      <!------------------------------>
+
       <div id="sidebar">
         <div id="toggle-btn" class="ion-navicon-round">
           <h6 class="menutext">Menu</h6>
@@ -23,12 +27,18 @@
           <li>Contact Us</li>
         </ul>
       </div>
-
+      <!------------------------------>
+      <!----------- TITLE ------------>
+      <!------------------------------>
       <h1 class="title">BON VOYAGE</h1>
       <h4 class="tag-line">GREAT EXPIERINCES DON'T COME FROM COMFORT ZONES</h4>
       <button class="home-register" type="button">Register</button>
       <button class="home-login" type="button">Log In</button>
     </header>
+
+    <!-------------------------------------->
+    <!----------- First Section ------------>
+    <!-------------------------------------->
     <section class="first-section">
       <h2 class="section-title">WHY CHOOSE US?</h2>
       <div class="reasons-para">
@@ -44,13 +54,15 @@
         </p>
       </div>
     </section>
+
+    <!-------------------------------------->
+    <!----------- Second Section ------------>
+    <!-------------------------------------->
     <section class="second-section">
       <div class="section1-images">
         <img
           src="/resources/css/img/Hawaii.jpg"
           alt="Hawaii"
-          width="50%"
-          height="400px"
           class="firstImage"
         />
         <div class="description1">
@@ -61,23 +73,24 @@
             corrupti impedit eligendi iste amet aperiam facere!
           </p>
         </div>
+
         <aside>
           <img
             src="resources/css/img/Island.jpg"
             alt="Island"
-            width="50%"
-            height="400px"
             class="SecondImage"
           />
+
+          <div class="description2">
+            <h3>Best Island</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio totam dolores exercitationem fuga quo sint itaque
+              asperiores! Alias corrupti impedit eligendi iste amet aperiam
+              facere!
+            </p>
+          </div>
         </aside>
-        <div class="description2">
-          <h3>Best Island</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-            totam dolores exercitationem fuga quo sint itaque asperiores! Alias
-            corrupti impedit eligendi iste amet aperiam facere!
-          </p>
-        </div>
       </div>
     </section>
 
