Booking page added and some changes

--- a/Register.html
+++ b/Register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Join Us</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/Register.css">
+    <link rel="stylesheet" type="text/css" href="/resources/css/Register.css">
 
 
   </head>
@@ -31,9 +31,9 @@
             </td>
             <td><input id="password" type="password" name="password" required></td>
           </tr>
-          <tr>
+          <tr class="radio-btn">
             <td><p>Gender : </p></td>
-            <td><p><input type="radio" name="gender" value="m" required>
+            <td><input type="radio" name="gender" value="m" required>
               Male
               <input type="radio" name="gender" value="f" required>
               Female</p>
@@ -57,7 +57,7 @@
                 <input type="phone" name="phone" required>
               </td>
               <tr>
-                <td><input type="submit" name="submit" value="Submit" ></td>
+                <td><button class="submit-btn" type="submit" name="submit" value="Submit">Submit</button></td>
               </tr>
             </tr>
       
