--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li>Home</li>
           <li>About</li>
-          <li>Packages</li>
+          <li onclick="packagepage()">Packages</li>
           <li>Orders</li>
           <li>Contact Us</li>
         </ul>
@@ -32,7 +32,9 @@
       <!------------------------------>
       <h1 class="title">BON VOYAGE</h1>
       <h4 class="tag-line">GREAT EXPIERINCES DON'T COME FROM COMFORT ZONES</h4>
-      <button class="home-register" type="button">Register</button>
+      <button class="home-register" type="button" onclick="register()">
+        Register
+      </button>
       <button class="home-login" type="button">Log In</button>
     </header>
 
@@ -93,6 +95,8 @@
         </aside>
       </div>
     </section>
+
+    <!-- FOOTER HTML -->
     <footer>
       <div class="row">
         <div class="col span-1-of-2">
@@ -123,7 +127,7 @@
       </div>
       <div class="row">
         <p>
-          Copyright &copy; 2015 by Omnifood. All rights reserved.
+          Copyright &copy; 2015 by Bon Voyage. All rights reserved.
         </p>
       </div>
     </footer>
