--- a/Booking.html
+++ b/Booking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/resources/css/Booking.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/Booking.css" />
     <title>Booking Page</title>
   </head>
   <body>
