--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Bon Voyage</title>
-    <link rel="stylesheet" type="text/css" href="/resources/css/index.css" />
-    <link rel="stylesheet" type="text/css" href="/vendors/css/grid.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
   </head>
   <body>
     <header>
@@ -45,14 +45,12 @@
       <h2 class="section-title">WHY CHOOSE US?</h2>
       <div class="reasons-para">
         <p class="col span-1-of-2 reasons">
-          Within easy reach of Victoria, Bon Voyage is welcoming, affordable,
-          and as wild as you like. Here, you live through your senses: Cedar.
-          Sea spray. Wood smoke. You move with the seasons, currents, and tides.
+          Within easy reach of Victoria, Bon Voyage is welcoming, affordable, and as wild as you like. Here, you live
+          through your senses: Cedar. Sea spray. Wood smoke. You move with the seasons, currents, and tides.
         </p>
         <p class="col span-1-of-2 reasons">
-          This is your gateway to ancient forests, epic hikes, and mighty surf —
-          from eagles and Chinook salmon to Sitka spruce and giant Douglas fir.
-          From here, you can trek, paddle, comb the beaches, or cast your line.
+          This is your gateway to ancient forests, epic hikes, and mighty surf — from eagles and Chinook salmon to Sitka
+          spruce and giant Douglas fir. From here, you can trek, paddle, comb the beaches, or cast your line.
         </p>
       </div>
     </section>
@@ -62,34 +60,23 @@
     <!-------------------------------------->
     <section class="second-section">
       <div class="section1-images">
-        <img
-          src="/resources/css/img/Hawaii.jpg"
-          alt="Hawaii"
-          class="firstImage"
-        />
+        <img src="resources/css/img/Hawaii.jpg" alt="Hawaii" class="firstImage" />
         <div class="description1">
           <h3>Best Beaches</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-            totam dolores exercitationem fuga quo sint itaque asperiores! Alias
-            corrupti impedit eligendi iste amet aperiam facere!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo
+            sint itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
           </p>
         </div>
 
         <aside>
-          <img
-            src="resources/css/img/Island.jpg"
-            alt="Island"
-            class="SecondImage"
-          />
+          <img src="resources/css/img/Island.jpg" alt="Island" class="SecondImage" />
 
           <div class="description2">
             <h3>Best Island</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio totam dolores exercitationem fuga quo sint itaque
-              asperiores! Alias corrupti impedit eligendi iste amet aperiam
-              facere!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo
+              sint itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
             </p>
           </div>
         </aside>
