--- a/Booking.html
+++ b/Booking.html
@@ -26,6 +26,6 @@
       </div>
     </section>
   </body>
-  <script src="/resources/JS/Booking.js"></script>
+  <script src="resources/JS/Booking.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </html>
