--- a/Register.html
+++ b/Register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Join Us</title>
-    <link rel="stylesheet" type="text/css" href="/resources/css/Register.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/Register.css">
 
 
   </head>
