--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
     </footer>
   </body>
 
-  <script src="/resources/JS/index.js"></script>
+  <script src="resources/JS/index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html>
