--- a/package.html
+++ b/package.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/resources/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
     <title>CSS Card Hover Effects</title>
   </head>
   <body>
@@ -14,9 +14,8 @@
           <div class="content">
             <h2>Lorem Ipsum</h2>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a
+              galley of type and scrambled it to make a type specimen book.
             </p>
           </div>
         </div>
@@ -29,9 +28,8 @@
           <div class="content">
             <h2>Lorem Ipsum</h2>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a
+              galley of type and scrambled it to make a type specimen book.
             </p>
           </div>
         </div>
@@ -44,9 +42,8 @@
           <div class="content">
             <h2>Lorem Ipsum</h2>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry when an unknown printer took a
+              galley of type and scrambled it to make a type specimen book.
             </p>
           </div>
         </div>
