--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li>Home</li>
           <li>About</li>
           <li onclick="packagepage()">Packages</li>
-          <li>Orders</li>
+          <li onclick="bookingpage()">Book</li>
           <li>Contact Us</li>
         </ul>
       </div>
@@ -35,7 +35,7 @@
       <button class="home-register" type="button" onclick="register()">
         Register
       </button>
-      <button class="home-login" type="button">Log In</button>
+      <button class="home-login" type="button" onclick="login()">Log In</button>
     </header>
 
     <!-------------------------------------->
