--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       <h2 class="section-title">WHY CHOOSE US?</h2>
       <div class="reasons-para">
         <p class="col span-1-of-2 reasons">
-          Within easy reach of Victoria, Bon Voyage is welcoming, affordable, and as wild as you like. Here, you live
-          through your senses: Cedar. Sea spray. Wood smoke. You move with the seasons, currents, and tides.
+          Within easy reach of Victoria, Bon Voyage is welcoming, affordable, and as wild as you like. Here, you live through your
+          senses: Cedar. Sea spray. Wood smoke. You move with the seasons, currents, and tides.
         </p>
         <p class="col span-1-of-2 reasons">
-          This is your gateway to ancient forests, epic hikes, and mighty surf — from eagles and Chinook salmon to Sitka
-          spruce and giant Douglas fir. From here, you can trek, paddle, comb the beaches, or cast your line.
+          This is your gateway to ancient forests, epic hikes, and mighty surf — from eagles and Chinook salmon to Sitka spruce
+          and giant Douglas fir. From here, you can trek, paddle, comb the beaches, or cast your line.
         </p>
       </div>
     </section>
@@ -64,8 +64,8 @@
         <div class="description1">
           <h3>Best Beaches</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo
-            sint itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo sint itaque
+            asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
           </p>
         </div>
 
@@ -75,8 +75,8 @@
           <div class="description2">
             <h3>Best Island</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo
-              sint itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo sint
+              itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
             </p>
           </div>
         </aside>
@@ -114,7 +114,7 @@
       </div>
       <div class="row">
         <p>
-          Copyright &copy; 2015 by Bon Voyage. All rights reserved.
+          Copyright &copy; 2019 by Bon Voyage. All rights reserved.
         </p>
       </div>
     </footer>
