New added templates and final touches to the projects

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bon Voyage</title>
     <link rel="stylesheet" type="text/css" href="resources/css/index.css" />
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <header>
@@ -24,14 +25,14 @@
           <li>About</li>
           <li onclick="packagepage()">Packages</li>
           <li onclick="bookingpage()">Book</li>
-          <li>Contact Us</li>
+          <li onclick="contactUspage()">Contact Us</li>
         </ul>
       </div>
       <!------------------------------>
       <!----------- TITLE ------------>
       <!------------------------------>
-      <h1 class="title">BON VOYAGE</h1>
-      <h4 class="tag-line">GREAT EXPIERINCES DON'T COME FROM COMFORT ZONES</h4>
+      <h1 class="title slideInDown" data-aos="fade-in" data-aos-duration="1000">BON VOYAGE</h1>
+      <h4 class="tag-line" data-aos="fade-up" data-aos-duration="2000">GREAT EXPIERINCES DON'T COME FROM COMFORT ZONES</h4>
       <button class="home-register" type="button" onclick="register()">
         Register
       </button>
@@ -42,15 +43,15 @@
     <!----------- First Section ------------>
     <!-------------------------------------->
     <section class="first-section">
-      <h2 class="section-title">WHY CHOOSE US?</h2>
+      <h2 class="section-title" data-aos="zoom-in">WHY CHOOSE US?</h2>
       <div class="reasons-para">
-        <p class="col span-1-of-2 reasons">
-          Within easy reach of Victoria, Bon Voyage is welcoming, affordable, and as wild as you like. Here, you live
-          through your senses: Cedar. Sea spray. Wood smoke. You move with the seasons, currents, and tides.
+        <p class="col span-1-of-2 reasons" data-aos="fade-right">
+          Within easy reach of Victoria, Bon Voyage is welcoming, affordable, and as wild as you like. Here, you live through your
+          senses: Cedar. Sea spray. Wood smoke. You move with the seasons, currents, and tides.
         </p>
-        <p class="col span-1-of-2 reasons">
-          This is your gateway to ancient forests, epic hikes, and mighty surf — from eagles and Chinook salmon to Sitka
-          spruce and giant Douglas fir. From here, you can trek, paddle, comb the beaches, or cast your line.
+        <p class="col span-1-of-2 reasons" data-aos="fade-left">
+          This is your gateway to ancient forests, epic hikes, and mighty surf — from eagles and Chinook salmon to Sitka spruce
+          and giant Douglas fir. From here, you can trek, paddle, comb the beaches, or cast your line.
         </p>
       </div>
     </section>
@@ -60,23 +61,22 @@
     <!-------------------------------------->
     <section class="second-section">
       <div class="section1-images">
-        <img src="resources/css/img/Hawaii.jpg" alt="Hawaii" class="firstImage" />
-        <div class="description1">
+        <img src="resources/css/img/Hawaii.jpg" alt="Hawaii" class="firstImage" data-aos="flip-down" />
+        <div class="description1" data-aos="fade-up">
           <h3>Best Beaches</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo
-            sint itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
+            There's something calming and reassuring about the steady lapping of the waves. The back and forth of the tide-pulled
+            waters can be soothing to the soul. Take some time out to just be.
           </p>
         </div>
 
         <aside>
-          <img src="resources/css/img/Island.jpg" alt="Island" class="SecondImage" />
+          <img src="resources/css/img/Island.jpg" alt="Island" class="SecondImage" data-aos="flip-down" />
 
-          <div class="description2">
+          <div class="description2 " data-aos="fade-up">
             <h3>Best Island</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio totam dolores exercitationem fuga quo
-              sint itaque asperiores! Alias corrupti impedit eligendi iste amet aperiam facere!
+              The real voyage of discovery consists not in seeking new landscapes, but in having new eyes.
             </p>
           </div>
         </aside>
@@ -114,12 +114,16 @@
       </div>
       <div class="row">
         <p>
-          Copyright &copy; 2015 by Bon Voyage. All rights reserved.
+          Copyright &copy; 2019 by Bon Voyage. All rights reserved.
         </p>
       </div>
     </footer>
   </body>
 
   <script src="resources/JS/index.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </html>
